# oarepo-dashboard

./: .gitignore  oarepo.yaml  package.json  pyproject.toml  run-tests.sh  setup.cfg
.github/workflows/: build.yaml  push.yaml
oarepo_dashboard/: __init__.py
oarepo_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
oarepo_dashboard/i18n/translations/: messages.mo  messages.pot
oarepo_dashboard/i18n/translations/cs/LC_MESSAGES/: messages.mo
oarepo_dashboard/i18n/translations/en/LC_MESSAGES/: messages.mo
oarepo_dashboard/translations/: messages.mo  messages.pot
oarepo_dashboard/translations/cs/LC_MESSAGES/: messages.mo  messages.po
oarepo_dashboard/translations/en/LC_MESSAGES/: messages.mo  messages.po
oarepo_dashboard/ui/: __init__.py  index.js  webpack.py
oarepo_dashboard/ui/dashboard/: __init__.py  webpack.py
oarepo_dashboard/ui/dashboard/semantic-ui/js/dashboard/components/: UserDashboardComputerNav.jsx  UserDashboardNav.jsx  UserDashboardSearchAppLayout.jsx
oarepo_dashboard/ui/dashboard/semantic-ui/js/dashboard/records/: MobileRecordsListItem.jsx  index.js
oarepo_dashboard/ui/dashboard/semantic-ui/js/dashboard/requests/: ComputerTabletRequestsListItem.jsx  MobileRequestsListItem.jsx  index.js
oarepo_dashboard/ui/dashboard/semantic-ui/less/oarepo_dashboard/themes/default/elements/: button.overrides
oarepo_dashboard/ui/dashboard/semantic-ui/less/oarepo_dashboard/themes/default/views/: item.overrides
oarepo_dashboard/ui/dashboard_communities/: __init__.py
oarepo_dashboard/ui/dashboard_communities/semantic-ui/js/dashboard_communities/search/: MobileCommunitiesListItem.jsx  index.js
oarepo_dashboard/ui/dashboard_components/: __init__.py  search.py  webpack.py
oarepo_dashboard/ui/dashboard_components/semantic-ui/js/dashboard_components/search/: FacetsButtonGroupNameToggler.jsx  UserDashboardSearchAppLayout.jsx  index.js
oarepo_dashboard/ui/dashboard_components/templates/oarepo/invenio_app_rdm/users/: header.html
oarepo_dashboard/ui/dashboard_records/: __init__.py
oarepo_dashboard/ui/dashboard_records/semantic-ui/js/dashboard_records/search/: index.js
oarepo_dashboard/ui/dashboard_requests/: __init__.py
oarepo_dashboard/ui/dashboard_requests/semantic-ui/js/dashboard_requests/search/: ComputerTabletRequestsListItem.jsx  MobileRequestsListItem.jsx  RequestTypeSpecificComponents.jsx  index.js  util.js
oarepo_dashboard/ui/dashboard_requests/semantic-ui/js/dashboard_requests/search/labels/: TypeLabels.jsx
oarepo_dashboard/ui/semantic-ui/js/: custom-components.js
oarepo_dashboard/ui/semantic-ui/js/dashboard/communities/: ComputerTabletCommunitiesListItem.jsx  MobileCommunitiesListItem.jsx  RestrictedLabel.jsx  index.js
oarepo_dashboard/ui/semantic-ui/js/dashboard/components/: UserDashboardSearchAppLayout.jsx
oarepo_dashboard/ui/semantic-ui/js/dashboard/records/: ComputerTabletRecordsListItem.jsx  MobileRecordsListItem.jsx  index.js
oarepo_dashboard/ui/semantic-ui/js/dashboard/requests/: ComputerTabletRequestsListItem.jsx  FacetsButtonGroup.jsx  MobileRequestsListItem.jsx  index.js
oarepo_dashboard/ui/semantic-ui/less/oarepo_dashboard/components/: custom-components.less
oarepo_dashboard/ui/semantic-ui/translations/oarepo_dashboard/messages/cs/LC_MESSAGES/: translations.json
oarepo_dashboard/ui/templates/: DashboardPage.jinja
tests/: conftest.py  test_alias_entry_point.py
