[project]
name = "oarepo-dashboard"
version = "4.0.0"
description = "Support for user dashboard (records, communities, requests)"
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
    { name = "Mirek Simek", email = "miroslav.simek@cesnet.cz" }
]
dependencies = [
    "oarepo[rdm,tests]>=14,<15",
    "oarepo-runtime>=4.0.0,<5.0.0",
    "oarepo-ui>=9.0.0,<10.0.0",
    "oarepo-rdm>=3.0.0,<4.0.0",
    "cachetools",
    "openpyxl",

    # invenio dependencies
    "invenio-assets>=4.0.0,<5.0.0",
    "invenio-i18n>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "oarepo-tools",
    "pytest>=7.1.2",
]

tests = [
    "pytest>=7.1.2",

    # invenio dependencies
    "pytest-invenio>=4.0.0,<5.0.0",
]

oarepo14 = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
]

[project.entry-points."invenio_base.blueprints"]
oarepo_dashboard_components = "oarepo_dashboard.ui.dashboard_components:create_blueprint"

[project.entry-points."invenio_assets.webpack"]
oarepo_dashboard_i18n = "oarepo_dashboard.i18n.webpack:theme"
oarepo_dashboard_components_ui_theme = "oarepo_dashboard.ui.dashboard_components.webpack:theme"

[project.entry-points."invenio_i18n.translations"]
oarepo_dashboard_messages = "oarepo_dashboard"

[project.entry-points."invenio_base.finalize_app"]
oarepo_dashboard_finalize_app = "oarepo_dashboard.ui.dashboard_components:finalize_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_dashboard",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
