[metadata]
name = oarepo-dashboard
version = 1.0.0
description = Support for user dashboard (records, communities, requests)
authors = Mirek Simek <miroslav.simek@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.9
install_requires =
    oarepo-runtime>=1.4.44
    openpyxl
    oarepo-ui>=5.0.91
    cachetools
packages = find:
include_package_data = True

[options.extras_require]
dev =
    oarepo-tools
tests =
    pytest>=7.1.2
    pytest-invenio
    black
    isort
    autoflake

[options.entry_points]
invenio_base.blueprints =
    oarepo_dashboard = oarepo_dashboard.ui:create_blueprint
invenio_assets.webpack =
    oarepo_dashboard_ui_theme = oarepo_dashboard.ui.webpack:theme
# invenio_i18n.translations = oarepo_vocabularies_ui = oarepo_vocabularies

# [oarepo.i18n]
# languages =
#     cs
#     en

# # List of paths to scan for babel messages - python files and jinja templates are scanned
# babel_source_paths =
#     oarepo_vocabularies/

# # List of paths to scan for i18next messages - javascript and jsx files are scanned
# i18next_source_paths =
#     oarepo_vocabularies/ui/theme/assets/semantic-ui/js

# # this is the location where python translations are generated.
# babel_output_translations =
#     oarepo_vocabularies/translations

# # this is the location where javascript translations are generated. Add this directory to webpack
# # aliases
# i18next_output_translations =
#     oarepo_vocabularies/ui/theme/assets/semantic-ui/translations/oarepo_vocabularies_ui

# [options.packages.find]
# exclude = tests

# [tool:pytest]
# testpaths =
#     tests