[metadata]
name = oarepo-dashboard
version = 1.0.0
description = Support for user dashboard (records, communities, requests)
authors = Mirek Simek <miroslav.simek@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.9
install_requires =
    oarepo-runtime>=1.4.44
    openpyxl
    oarepo-ui>=5.0.91
    cachetools
packages = find:
include_package_data = True

[options.extras_require]
dev =
    oarepo-tools
tests =
    pytest>=7.1.2
    pytest-invenio
    black
    isort
    autoflake

[options.entry_points]
invenio_base.blueprints =
    oarepo_dashboard = oarepo_dashboard.ui:create_blueprint
invenio_assets.webpack =
    oarepo_dashboard_ui_theme = oarepo_dashboard.ui.webpack:theme
